# entertainmentlogger

./: .env.example  Caddyfile  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20241114112104_init.sql
backend/src/: error.rs  jwt_middleware.rs  main.rs  mod.rs  util.rs
backend/src/queries/: company.rs  franchise.rs  genre.rs  media.rs  mod.rs  person.rs  user.rs
backend/src/queries/relations/: franchise_to_media_link.rs  franchise_to_user_link.rs  genre_to_media_link.rs  media_to_user_link.rs  mod.rs  person_to_company_link.rs  person_to_media_link.rs
backend/src/queries/views/: media_with_user_data.rs  mod.rs
backend/src/routing/: franchise.rs  media.rs  mod.rs  person.rs  user.rs  user_login.rs
backend/src/types/: company.rs  franchise.rs  genre.rs  media.rs  mod.rs  person.rs  table_names.rs  user.rs
backend/src/types/relations/: company_to_media_link.rs  franchise_to_media_link.rs  franchise_to_user_link.rs  genre_to_media_link.rs  media_to_user_link.rs  mod.rs  person_to_company_link.rs  person_to_media_link.rs
backend/src/types/views/: media_with_user_data.rs  mod.rs
frontend/: .env.example  .gitignore  .prettierrc.cjs  Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
frontend/src/components/: CreatorsPage.svelte  FranchiseCard.svelte  ImageCollage.svelte  IndexPage.svelte  PictureCard.svelte  Rating.svelte  Searchbar.svelte
frontend/src/layouts/: Layout.astro
frontend/src/pages/: creators.astro  index.astro  login.astro  register.astro
(+21 files in other folders)
