[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
http-body = "1.0.1"
once_cell = { version = "1.20.2", features = ["parking_lot"] }
poem = { version = "3.1.3", features = ["eyre06", "yaml", "serde_yaml", "session", "cookie"] }
poem-openapi = { version = "5.1.2", features = ["chrono", "hostname", "email", "redoc", "openapi-explorer", "url"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["parking_lot", "once_cell", "tracing", "env-filter"] }
typeshare = "1.0.4"
ulid = "1.0.1"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
base64 = "0.13.0"
chrono = {version = "0.4.31", features = ["serde"]}
clap = { version = "4.5.21", features = ["derive", "env", "cargo"] }
oxipng = { version = "9.1.2", default-features = false, features = [
    "parallel"
] }
argon2 = { version = "0.5.2", features = ["std"] }
password-hash = "0.5.0"
sqlx = { version = "0.8.2", default-features = false, features = ["uuid", "postgres", "json", "chrono", "runtime-tokio", "macros", "_unstable-all-types", "migrate"] }